--- a/beta/index.html
+++ b/beta/index.html
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="book">
                                     <div>
-                                        <a href="room-overview.html" class="btn btn-main">Reserve Agora</a>
+                                        <a href="rooms-category.html" class="btn btn-main">Reserve Agora</a>
                                     </div>
                                     <div>
                                         <span class="price h4">R$150</span>
