--- a/beta/index.html
+++ b/beta/index.html
@@ -178,7 +178,7 @@
                         <!--=== button ===-->
 
                         <div class="col-xs-12 col-sm-4">
-                            <a href="reservation-1.html" class="btn btn-clean">
+                            <a href="rooms-category.html" class="btn btn-clean">
                                 Reserve Agora
                                 <small>Melhores Preços Garantidos</small>
                             </a>
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="book">
                                     <div>
-                                        <a href="rooms-category.html" class="btn btn-main">Reserve Agora</a>
+                                        <a href="room-overview.html" class="btn btn-main">Reserve Agora</a>
                                     </div>
                                     <div>
                                         <span class="price h4">R$150</span>
